refactor: extracted process entities in OperateSearchAbstractIT
(cherry picked from commit cac8e78941ac708966f174ee9a2669ea1dc18cbd)